--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 Leo messi is an argentine professional footballer who plays
 as a forward for Ligue 1 club Paris Saint-Germain and captains the Argentina national team.
 Leo messi considered by many the best player in the world and the greatest of all time.</b></div>
-<br><img src="images/messi the goat.jpg">
+<br><img src="Images/messi the goat.jpg">
 
 <br>"Messi the GOAT (Greatest of all time)"
 <h2><u>Club Career</u></h2>
@@ -31,7 +31,7 @@ Leo messi considered by many the best player in the world and the greatest of al
  and financial issues-some of which were the result of La Liga rules-largely prevented him from re-signing with Barcelona.
  He left the club having set a number of records; notably, he was the leading goal scorer in the league’s history (474).
  Later in 2021 he signed with Paris St.-Germain.</b></div>
- <br><img src="images/messi barcelona.jpg">
+ <br><img src="Images/messi barcelona.jpg">
  <br>"Messi records at FC Barcelona"
  <br> <a href="https://youtu.be/YuQd2m-teUc" target="_blank"> The Messi Era - Official movie</a>
 <h4><u>Paris Saint-Germain</u></h4>
@@ -45,7 +45,7 @@ Leo messi considered by many the best player in the world and the greatest of al
  in a 2–0 Champions League group stage win over Pep Guardiola's Manchester City.
  On 21 November, Messi scored his first Ligue 1 goal in a 3–1 home victory over Nantes.
  On 28 November, Messi provided a hat-trick of assists for the fifth time in his career as PSG beat Saint-Étienne 3–1 away from home.</b></div>
-<br><img src="images/messi psg.png">
+<br><img src="Images/messi psg.png">
 <br> "Messi joined PSG"
 
 
